src/main/java/org/intellij/sdk/language/XCS.bnf
{
  parserClass="org.intellij.sdk.language.parser.XCSParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="XCS"
  psiImplClassSuffix="Impl"
  psiPackage="org.intellij.sdk.language.psi"
  psiImplPackage="org.intellij.sdk.language.psi.impl"

  elementTypeHolderClass="org.intellij.sdk.language.psi.XCSTypes"
  elementTypeClass="org.intellij.sdk.language.psi.XCSElementType"
  tokenTypeClass="org.intellij.sdk.language.psi.XCSTokenType"
}

xsc_file ::= items *
private items ::= (collection_event_section|equipment_constant_section|status_variable_section|vfei_secs_seq_section|functions|COMMENT)


// SF paragraph treatment
functions ::= (FUNCTION_NAME COLON STREAM_FUNCTION [FUNCTION_COMMENT] FUNCTION_CORE* FUNCTION_END [FUNCTION_COMMENT])
FUNCTION_CORE ::= (CORE_START VARIABLE_TYPE [VARIABLE_NAME] [PROPERTY] [VARIABLE_VALUE] CORE_END [FUNCTION_COMMENT]) |
                  (CORE_START ASCII_TYPE [VARIABLE_NAME] [PROPERTY] [ASCII_VALUE] CORE_END [FUNCTION_COMMENT]) |
                  (CORE_START LIST_TYPE [VARIABLE_NAME] FUNCTION_CORE* CORE_END [FUNCTION_COMMENT]) |
PROPERTY ::= PROPERTY_START PROPERTY_+ PROPERTY_END
PROPERTY_ ::= PROPERTY_NAME EQUALS PROPERTY_VALUE

// CE paragraph treatment
collection_event_section ::= (COLLECTION_EVENT COLON [FUNCTION_COMMENT] [CE_LIST] FUNCTION_END [FUNCTION_COMMENT])
CE_LIST ::= (CORE_START LIST_TYPE CE_CORE* CORE_END [FUNCTION_COMMENT])
CE_CORE ::= (CORE_START ASCII_TYPE [CEID] [CE_PROPERTY] ASCII_VALUE CORE_END [FUNCTION_COMMENT]) |
            (CORE_START VARIABLE_TYPE [CEID] [CE_PROPERTY] VARIABLE_VALUE CORE_END [FUNCTION_COMMENT])
CE_PROPERTY ::= PROPERTY_START CE_PROPERTY_+ PROPERTY_END
CE_PROPERTY_ ::= PROPERTY_NAME_CE EQUALS PROPERTY_VALUE

// EC paragraph treatment
equipment_constant_section ::= (EQUIPMENT_CONSTANT COLON [FUNCTION_COMMENT] [EC_LIST] FUNCTION_END [FUNCTION_COMMENT])
EC_LIST ::= (CORE_START LIST_TYPE EC_CORE* CORE_END [FUNCTION_COMMENT])
EC_CORE ::= (CORE_START ASCII_TYPE [ECID] [EC_PROPERTY] ASCII_VALUE CORE_END [FUNCTION_COMMENT]) |
            (CORE_START VARIABLE_TYPE [ECID] [EC_PROPERTY] VARIABLE_VALUE CORE_END [FUNCTION_COMMENT])
EC_PROPERTY ::= PROPERTY_START EC_PROPERTY_+ PROPERTY_END
EC_PROPERTY_ ::= PROPERTY_NAME_EC EQUALS PROPERTY_VALUE

// SV paragraph treatment
status_variable_section ::= (STATUS_VARIABLE COLON [FUNCTION_COMMENT] [SV_LIST] FUNCTION_END [FUNCTION_COMMENT])
SV_LIST ::= (CORE_START LIST_TYPE SV_CORE* CORE_END [FUNCTION_COMMENT])
SV_CORE ::= (CORE_START ASCII_TYPE [SVID] [SV_PROPERTY] ASCII_VALUE CORE_END [FUNCTION_COMMENT]) |
            (CORE_START VARIABLE_TYPE [SVID] [SV_PROPERTY] VARIABLE_VALUE CORE_END [FUNCTION_COMMENT])
SV_PROPERTY ::= PROPERTY_START SV_PROPERTY_+ PROPERTY_END
SV_PROPERTY_ ::= PROPERTY_NAME_SV EQUALS PROPERTY_VALUE

// VSS paragraph treatment
vfei_secs_seq_section ::= (VFEI_SECS_SEQ COLON [FUNCTION_COMMENT] [VSS_LIST] FUNCTION_END [FUNCTION_COMMENT])
VSS_LIST ::= (CORE_START LIST_TYPE VSS_CORE* CORE_END [FUNCTION_COMMENT])
VSS_CORE ::=  (CORE_START ASCII_TYPE [VSS_PROPERTY] ASCII_VALUE CORE_END [FUNCTION_COMMENT]) |
              (CORE_START LIST_TYPE VFEI_CMD_ITEM_NAME VSS_CORE* CORE_END [FUNCTION_COMMENT]) |
              (CORE_START LIST_TYPE VARIABLE_NAME VSS_CORE* CORE_END [FUNCTION_COMMENT])
VSS_PROPERTY ::= PROPERTY_START VSS_PROPERTY_+ PROPERTY_END
VSS_PROPERTY_ ::= PROPERTY_NAME_VSS EQUALS PROPERTY_VALUE
