src/main/gen/cea/language/xsc/parser/XCSParser.java
// This is a generated file. Not intended for manual editing.
package cea.language.xsc.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static cea.language.xsc.psi.XCSTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XCSParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return xsc_file(b, l + 1);
  }

  /* ********************************************************** */
  // ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE
  public static boolean ASCII_VALUES_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASCII_VALUES_4")) return false;
    if (!nextTokenIs(b, ASCII_VALUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ASCII_VALUE, ASCII_VALUE, ASCII_VALUE, ASCII_VALUE);
    exit_section_(b, m, ASCII_VALUES_4, r);
    return r;
  }

  /* ********************************************************** */
  // ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE
  public static boolean ASCII_VALUES_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASCII_VALUES_5")) return false;
    if (!nextTokenIs(b, ASCII_VALUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ASCII_VALUE, ASCII_VALUE, ASCII_VALUE, ASCII_VALUE, ASCII_VALUE);
    exit_section_(b, m, ASCII_VALUES_5, r);
    return r;
  }

  /* ********************************************************** */
  // (CORE_START ASCII_TYPE CEID? CE_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?) |
  //             (CORE_START VARIABLE_TYPE CEID? CE_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?)
  public static boolean CE_CORE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CE_CORE_0(b, l + 1);
    if (!r) r = CE_CORE_1(b, l + 1);
    exit_section_(b, m, CE_CORE, r);
    return r;
  }

  // CORE_START ASCII_TYPE CEID? CE_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?
  private static boolean CE_CORE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, ASCII_TYPE);
    r = r && CE_CORE_0_2(b, l + 1);
    r = r && CE_CORE_0_3(b, l + 1);
    r = r && consumeTokens(b, 0, ASCII_VALUE, CORE_END);
    r = r && CE_CORE_0_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CEID?
  private static boolean CE_CORE_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_0_2")) return false;
    consumeToken(b, CEID);
    return true;
  }

  // CE_PROPERTY?
  private static boolean CE_CORE_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_0_3")) return false;
    CE_PROPERTY(b, l + 1);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean CE_CORE_0_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_0_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  // CORE_START VARIABLE_TYPE CEID? CE_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?
  private static boolean CE_CORE_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, VARIABLE_TYPE);
    r = r && CE_CORE_1_2(b, l + 1);
    r = r && CE_CORE_1_3(b, l + 1);
    r = r && consumeTokens(b, 0, VARIABLE_VALUE, CORE_END);
    r = r && CE_CORE_1_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CEID?
  private static boolean CE_CORE_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_1_2")) return false;
    consumeToken(b, CEID);
    return true;
  }

  // CE_PROPERTY?
  private static boolean CE_CORE_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_1_3")) return false;
    CE_PROPERTY(b, l + 1);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean CE_CORE_1_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_CORE_1_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // CORE_START LIST_TYPE CE_CORE* CORE_END FUNCTION_COMMENT?
  public static boolean CE_LIST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_LIST")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, LIST_TYPE);
    r = r && CE_LIST_2(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && CE_LIST_4(b, l + 1);
    exit_section_(b, m, CE_LIST, r);
    return r;
  }

  // CE_CORE*
  private static boolean CE_LIST_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_LIST_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CE_CORE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CE_LIST_2", c)) break;
    }
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean CE_LIST_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_LIST_4")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // PROPERTY_START CE_PROPERTY_+ PROPERTY_END
  public static boolean CE_PROPERTY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_PROPERTY")) return false;
    if (!nextTokenIs(b, PROPERTY_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PROPERTY_START);
    r = r && CE_PROPERTY_1(b, l + 1);
    r = r && consumeToken(b, PROPERTY_END);
    exit_section_(b, m, CE_PROPERTY, r);
    return r;
  }

  // CE_PROPERTY_+
  private static boolean CE_PROPERTY_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_PROPERTY_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CE_PROPERTY_(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!CE_PROPERTY_(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CE_PROPERTY_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PROPERTY_NAME_CE EQUALS PROPERTY_VALUE
  public static boolean CE_PROPERTY_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CE_PROPERTY_")) return false;
    if (!nextTokenIs(b, PROPERTY_NAME_CE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PROPERTY_NAME_CE, EQUALS, PROPERTY_VALUE);
    exit_section_(b, m, CE_PROPERTY_, r);
    return r;
  }

  /* ********************************************************** */
  // (CORE_START ASCII_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? ASCII_VALUE? CORE_END FUNCTION_COMMENT?) |
  //             (CORE_START LIST_TYPE VARIABLE_NAME? DV_PROPERTY? DV_CORE* CORE_END FUNCTION_COMMENT?) |
  //             (CORE_START VARIABLE_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? VARIABLE_VALUE? CORE_END FUNCTION_COMMENT?)
  public static boolean DV_CORE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DV_CORE_0(b, l + 1);
    if (!r) r = DV_CORE_1(b, l + 1);
    if (!r) r = DV_CORE_2(b, l + 1);
    exit_section_(b, m, DV_CORE, r);
    return r;
  }

  // CORE_START ASCII_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? ASCII_VALUE? CORE_END FUNCTION_COMMENT?
  private static boolean DV_CORE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, ASCII_TYPE);
    r = r && DV_CORE_0_2(b, l + 1);
    r = r && DV_CORE_0_3(b, l + 1);
    r = r && DV_CORE_0_4(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && DV_CORE_0_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DVID|VARIABLE_NAME)?
  private static boolean DV_CORE_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0_2")) return false;
    DV_CORE_0_2_0(b, l + 1);
    return true;
  }

  // DVID|VARIABLE_NAME
  private static boolean DV_CORE_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0_2_0")) return false;
    boolean r;
    r = consumeToken(b, DVID);
    if (!r) r = consumeToken(b, VARIABLE_NAME);
    return r;
  }

  // DV_PROPERTY?
  private static boolean DV_CORE_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0_3")) return false;
    DV_PROPERTY(b, l + 1);
    return true;
  }

  // ASCII_VALUE?
  private static boolean DV_CORE_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0_4")) return false;
    consumeToken(b, ASCII_VALUE);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean DV_CORE_0_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_0_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  // CORE_START LIST_TYPE VARIABLE_NAME? DV_PROPERTY? DV_CORE* CORE_END FUNCTION_COMMENT?
  private static boolean DV_CORE_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, LIST_TYPE);
    r = r && DV_CORE_1_2(b, l + 1);
    r = r && DV_CORE_1_3(b, l + 1);
    r = r && DV_CORE_1_4(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && DV_CORE_1_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VARIABLE_NAME?
  private static boolean DV_CORE_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_1_2")) return false;
    consumeToken(b, VARIABLE_NAME);
    return true;
  }

  // DV_PROPERTY?
  private static boolean DV_CORE_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_1_3")) return false;
    DV_PROPERTY(b, l + 1);
    return true;
  }

  // DV_CORE*
  private static boolean DV_CORE_1_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_1_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!DV_CORE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DV_CORE_1_4", c)) break;
    }
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean DV_CORE_1_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_1_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  // CORE_START VARIABLE_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? VARIABLE_VALUE? CORE_END FUNCTION_COMMENT?
  private static boolean DV_CORE_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, VARIABLE_TYPE);
    r = r && DV_CORE_2_2(b, l + 1);
    r = r && DV_CORE_2_3(b, l + 1);
    r = r && DV_CORE_2_4(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && DV_CORE_2_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DVID|VARIABLE_NAME)?
  private static boolean DV_CORE_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2_2")) return false;
    DV_CORE_2_2_0(b, l + 1);
    return true;
  }

  // DVID|VARIABLE_NAME
  private static boolean DV_CORE_2_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2_2_0")) return false;
    boolean r;
    r = consumeToken(b, DVID);
    if (!r) r = consumeToken(b, VARIABLE_NAME);
    return r;
  }

  // DV_PROPERTY?
  private static boolean DV_CORE_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2_3")) return false;
    DV_PROPERTY(b, l + 1);
    return true;
  }

  // VARIABLE_VALUE?
  private static boolean DV_CORE_2_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2_4")) return false;
    consumeToken(b, VARIABLE_VALUE);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean DV_CORE_2_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_CORE_2_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // CORE_START LIST_TYPE DV_CORE* CORE_END FUNCTION_COMMENT?
  public static boolean DV_LIST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_LIST")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, LIST_TYPE);
    r = r && DV_LIST_2(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && DV_LIST_4(b, l + 1);
    exit_section_(b, m, DV_LIST, r);
    return r;
  }

  // DV_CORE*
  private static boolean DV_LIST_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_LIST_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!DV_CORE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DV_LIST_2", c)) break;
    }
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean DV_LIST_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_LIST_4")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // PROPERTY_START DV_PROPERTY_+ PROPERTY_END
  public static boolean DV_PROPERTY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_PROPERTY")) return false;
    if (!nextTokenIs(b, PROPERTY_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PROPERTY_START);
    r = r && DV_PROPERTY_1(b, l + 1);
    r = r && consumeToken(b, PROPERTY_END);
    exit_section_(b, m, DV_PROPERTY, r);
    return r;
  }

  // DV_PROPERTY_+
  private static boolean DV_PROPERTY_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_PROPERTY_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DV_PROPERTY_(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!DV_PROPERTY_(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DV_PROPERTY_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PROPERTY_NAME_DV EQUALS PROPERTY_VALUE
  public static boolean DV_PROPERTY_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DV_PROPERTY_")) return false;
    if (!nextTokenIs(b, PROPERTY_NAME_DV)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PROPERTY_NAME_DV, EQUALS, PROPERTY_VALUE);
    exit_section_(b, m, DV_PROPERTY_, r);
    return r;
  }

  /* ********************************************************** */
  // (CORE_START ASCII_TYPE ECID? EC_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?) |
  //             (CORE_START VARIABLE_TYPE ECID? EC_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?)
  public static boolean EC_CORE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EC_CORE_0(b, l + 1);
    if (!r) r = EC_CORE_1(b, l + 1);
    exit_section_(b, m, EC_CORE, r);
    return r;
  }

  // CORE_START ASCII_TYPE ECID? EC_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?
  private static boolean EC_CORE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, ASCII_TYPE);
    r = r && EC_CORE_0_2(b, l + 1);
    r = r && EC_CORE_0_3(b, l + 1);
    r = r && consumeTokens(b, 0, ASCII_VALUE, CORE_END);
    r = r && EC_CORE_0_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ECID?
  private static boolean EC_CORE_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_0_2")) return false;
    consumeToken(b, ECID);
    return true;
  }

  // EC_PROPERTY?
  private static boolean EC_CORE_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_0_3")) return false;
    EC_PROPERTY(b, l + 1);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean EC_CORE_0_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_0_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  // CORE_START VARIABLE_TYPE ECID? EC_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?
  private static boolean EC_CORE_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, VARIABLE_TYPE);
    r = r && EC_CORE_1_2(b, l + 1);
    r = r && EC_CORE_1_3(b, l + 1);
    r = r && consumeTokens(b, 0, VARIABLE_VALUE, CORE_END);
    r = r && EC_CORE_1_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ECID?
  private static boolean EC_CORE_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_1_2")) return false;
    consumeToken(b, ECID);
    return true;
  }

  // EC_PROPERTY?
  private static boolean EC_CORE_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_1_3")) return false;
    EC_PROPERTY(b, l + 1);
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean EC_CORE_1_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_CORE_1_6")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // CORE_START LIST_TYPE EC_CORE* CORE_END FUNCTION_COMMENT?
  public static boolean EC_LIST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_LIST")) return false;
    if (!nextTokenIs(b, CORE_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, LIST_TYPE);
    r = r && EC_LIST_2(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && EC_LIST_4(b, l + 1);
    exit_section_(b, m, EC_LIST, r);
    return r;
  }

  // EC_CORE*
  private static boolean EC_LIST_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_LIST_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EC_CORE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EC_LIST_2", c)) break;
    }
    return true;
  }

  // FUNCTION_COMMENT?
  private static boolean EC_LIST_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_LIST_4")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // PROPERTY_START EC_PROPERTY_+ PROPERTY_END
  public static boolean EC_PROPERTY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_PROPERTY")) return false;
    if (!nextTokenIs(b, PROPERTY_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PROPERTY_START);
    r = r && EC_PROPERTY_1(b, l + 1);
    r = r && consumeToken(b, PROPERTY_END);
    exit_section_(b, m, EC_PROPERTY, r);
    return r;
  }

  // EC_PROPERTY_+
  private static boolean EC_PROPERTY_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_PROPERTY_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EC_PROPERTY_(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!EC_PROPERTY_(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EC_PROPERTY_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PROPERTY_NAME_EC EQUALS PROPERTY_VALUE
  public static boolean EC_PROPERTY_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EC_PROPERTY_")) return false;
    if (!nextTokenIs(b, PROPERTY_NAME_EC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PROPERTY_NAME_EC, EQUALS, PROPERTY_VALUE);
    exit_section_(b, m, EC_PROPERTY_, r);
    return r;
  }

  /* ********************************************************** */
  // (CORE_START ASCII_TYPE ASCII_VALUES_4 CORE_END FUNCTION_COMMENT?) |
  //                 (CORE_START LIST_TYPE VARIABLE_NAME? EVENTS_CORE* CORE_END FUNCTION_COMMENT?) |
  public static boolean EVENTS_CORE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EVENTS_CORE, "<events core>");
    r = EVENTS_CORE_0(b, l + 1);
    if (!r) r = EVENTS_CORE_1(b, l + 1);
    if (!r) r = consumeToken(b, EVENTS_CORE_2_0);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CORE_START ASCII_TYPE ASCII_VALUES_4 CORE_END FUNCTION_COMMENT?
  private static boolean EVENTS_CORE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, ASCII_TYPE);
    r = r && ASCII_VALUES_4(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && EVENTS_CORE_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // FUNCTION_COMMENT?
  private static boolean EVENTS_CORE_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE_0_4")) return false;
    consumeToken(b, FUNCTION_COMMENT);
    return true;
  }

  // CORE_START LIST_TYPE VARIABLE_NAME? EVENTS_CORE* CORE_END FUNCTION_COMMENT?
  private static boolean EVENTS_CORE_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CORE_START, LIST_TYPE);
    r = r && EVENTS_CORE_1_2(b, l + 1);
    r = r && EVENTS_CORE_1_3(b, l + 1);
    r = r && consumeToken(b, CORE_END);
    r = r && EVENTS_CORE_1_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VARIABLE_NAME?
  private static boolean EVENTS_CORE_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE_1_2")) return false;
    consumeToken(b, VARIABLE_NAME);
    return true;
  }

  // EVENTS_CORE*
  private static boolean EVENTS_CORE_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EVENTS_CORE_1_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EVENTS_CORE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EVENTS_CORE_1_3", c)) break;
    }
    return true;
  }
